# DL_musicgen_ft_project

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  finetune.py  inference.py  pyproject.toml
RES/: prompt_1.json  prompt_2.json  prompt_3.json  prompt_4.json  prompt_5.json
configs/: musiccaps_train.yaml  text2music.yaml
data_prep/: 01_download_audio.py  02_llm_enrichment.py  03_create_manifests.py
scripts/: download_weights.py
utils/: data_utils.py  dir_utils.py  requests_utils.py
