[project]
name = "hw4-musicgen-finetuning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.7.0",
    "dotenv>=0.9.9",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
    "yt-dlp>=2026.3.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
torch = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
