[project]
name = "hw4-musicgen-finetuning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "av>=16.1.0",
    "datasets>=4.7.0",
    "demucs>=4.0.1",
    "dora-search>=0.1.12",
    "dotenv>=0.9.9",
    "einops>=0.8.2",
    "encodec>=0.1.1",
    "flashy>=0.0.2",
    "gdown>=5.2.1",
    "gradio>=6.9.0",
    "huggingface-hub>=1.6.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "julius>=0.2.7",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "num2words>=0.5.14",
    "openai>=2.26.0",
    "pesq>=0.0.4",
    "protobuf>=6.33.5",
    "pydantic>=2.12.5",
    "pyloudnorm>=0.2.0",
    "pystoi>=0.4.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "spacy>=3.8.11",
    "torchdiffeq>=0.2.5",
    "torchmetrics>=1.9.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.3.0",
    "xformers>=0.0.35",
    "yt-dlp>=2026.3.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "wandb>=0.25.1",
]
torch = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]

